--- a/config/Config-V2ray.yml
+++ b/config/Config-V2ray.yml
@@ -15,8 +15,8 @@ Nodes:
   -
     PanelType: "V2board" # Panel type: SSpanel, V2board, PMpanel, Proxypanel
     ApiConfig:
-      ApiHost: "https://aikocute.com"
-      ApiKey: "adminadminadminadminadmin"
+      ApiHost: "https://ezdigi.biz"
+      ApiKey: "kenhdidong_mmmzo"
       NodeID: 1
       NodeType: V2ray # Node type: V2ray, Trojan, Shadowsocks, Shadowsocks-Plugin
       Timeout: 30 # Timeout for the api request
