--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   xrayr: 
     image: aikocute/xrayr:latest
     volumes:
-      - ./config.yml:/etc/XrayR/config.yml # thư mục cấu hình bản đồ
-      - ./dns.json:/etc/XrayR/dns.json 
+      - ./config:/etc/XrayR/ #AikoCute
     restart: always
     network_mode: host
+
